# auto-sdlc

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
auto_sdlc/: ask.py  coder_dx.py  file_ops.py  reviewer.py
tests/unit/: test_coder_dx.py  test_simple_generation.py
