[tool.poetry]
name = "auto-sdlc"
version = "0.1.0"
description = "AutoSDLC"
authors = ["Aaron (AJ) Steers <aj@airbyte.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.13"
mypy = "^1.8.0"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
